Json objects handling and sending to another service